fix(ds): set minimum word spacing to 2

--- a/projects/client/src/style/typography/index.css
+++ b/projects/client/src/style/typography/index.css
@@ -10,6 +10,20 @@ span.display-title {
   padding: 0;
 }
 
+h1,
+h2 {
+  word-spacing: var(--ni-4);
+}
+
+h3,
+h4,
+h5,
+h6,
+p,
+span {
+  word-spacing: var(--ni-2);
+}
+
 span.display-title {
   display: block;
 
@@ -27,7 +41,6 @@ h1 {
   font-style: normal;
   font-weight: 600;
   letter-spacing: -0.18rem;
-  word-spacing: var(--ni-4);
 }
 
 h2 {
@@ -35,7 +48,6 @@ h2 {
   font-style: normal;
   font-weight: 600;
   letter-spacing: -0.14rem;
-  word-spacing: var(--ni-4);
 }
 
 h3 {
@@ -43,7 +55,6 @@ h3 {
   font-style: normal;
   font-weight: 600;
   letter-spacing: -0.12rem;
-  word-spacing: var(--ni-2);
 }
 
 h4 {
@@ -51,7 +62,6 @@ h4 {
   font-style: normal;
   font-weight: 600;
   letter-spacing: -0.1rem;
-  word-spacing: var(--ni-2);
 }
 
 h5 {
